data/derived/fa15/progs/unify/prog1741.ml.out
Characters 94-110:
  |x when x>=10->(multHelper i t)::((x/10),(x mod 10))
                 ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
